--- a/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
@@ -1,3 +1,191 @@
-<p>
-  bizonylat-tetel-szerkesztes works!
-</p>
+<div class="alapkeret">
+  <h5 *ngIf="bizonylatservice.uj">Új {{bizonylatservice.bizonylatLeiro.BizonylatNev | lowercase}}tétel</h5>
+  <h5 *ngIf="!bizonylatservice.uj">{{bizonylatservice.bizonylatLeiro.BizonylatNev}}tétel módosítása</h5>
+
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Ternékdíjas</div>
+    </div>
+    <div class="col-md-1">
+      <select type="text" class="form-control form-control-sm" name="termekdijas">
+        <option>Nem</option>
+        <option>Igen</option>
+      </select>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Közvetített szolgáltatás</div>
+    </div>
+    <div class="col-md-1">
+      <select type="text" class="form-control form-control-sm" name="kozvetitett">
+        <option>Nem</option>
+        <option>Igen</option>
+      </select>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Előleg</div>
+    </div>
+    <div class="col-md-1">
+      <select type="text" class="form-control form-control-sm" name="eloleg">
+        <option>Nem</option>
+        <option>Igen</option>
+      </select>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Megnevezés</div>
+    </div>
+    <div class="col-md-4">
+      <input type="text" class="form-control form-control-sm" id="megnevezes" name="megnevezes"
+             maxlength="100" required autocomplete="off" style="background-color: aquamarine">
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-sm btn-outline-primary" (click)="CikkZoom()"
+              style="margin-left: 4px" type="button">...</button>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Megjegyzés</div>
+    </div>
+    <div class="col-md-4">
+      <input type="text" class="form-control form-control-sm" id="megjegyzes" name="megjegyzes"
+             autocomplete="off">
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Mennyiség</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="mennyiseg" name="mennyiseg"
+             required>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Me</div>
+    </div>
+    <div class="col-md-1">
+      <input type="text" class="form-control form-control-sm" id="me" name="me"
+             maxlength="10" required autocomplete="off" style="background-color: aquamarine">
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-sm btn-outline-primary" (click)="MeZoom()"
+              style="margin-left: 4px" type="button">...</button>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Egységár</div>
+    </div>
+    <div class="col-md-4 input-group">
+      <input type="number" class="form-control form-control-sm" id="egysegar" name="egysegar"
+             required>
+      <button class="btn btn-sm btn-outline-primary" (click)="Br()"
+              style="margin-left: 4px;margin-right: 4px" type="button"><- Br</button>
+      <input type="number" class="form-control form-control-sm" id="bruttoosszeg" name="bruttoosszeg">
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">ÁFA kulcs</div>
+    </div>
+    <div class="col-md-1">
+      <input type="text" class="form-control form-control-sm" id="afakulcs" name="afakulcs"
+             maxlength="10" required autocomplete="off" style="background-color: aquamarine">
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-sm btn-outline-primary" (click)="AfaZoom()"
+              style="margin-left: 4px" type="button">...</button>
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Tömeg, kg</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="tomegkg" name="tomegkg"
+             required>
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-2">
+      <div class="editform-title">Netto</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="netto" name="netto" readonly="true">
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Termékdíj KT</div>
+    </div>
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" id="termekdijkt" name="termekdijkt"
+             maxlength="10" required autocomplete="off" style="background-color: aquamarine">
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-sm btn-outline-primary" (click)="TermekdijZoom()"
+              style="margin-left: 4px" type="button">...</button>
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+      <div class="editform-title">ÁFA</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="afa" name="afa" readonly="true">
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Termékdíj megnevezés</div>
+    </div>
+    <div class="col-md-3">
+      <input type="text" class="form-control form-control-sm" id="termekdijmegnevezes" name="termekdijmegnevezes"
+             readonly="true" autocomplete="off">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+      <div class="editform-title">Brutto</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="brutto" name="brutto" readonly="true">
+    </div>
+  </div>
+  <div class="row no-gutters editform-row">
+    <div class="col-md-2">
+      <div class="editform-title">Termékdíj egységár</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="termekdijegysegar" name="termekdijegysegar"
+             readonly="true">
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-2">
+      <div class="editform-title">Termékdíj a brutto árból</div>
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" id="terekdijabruttoarbol" name="terekdijabruttoarbol" readonly="true">
+    </div>
+  </div>
+
+  <div class="row no-gutters" style="margin-bottom: 10px">
+    <div class="col-md-2">
+    </div>
+    <button class="btn btn-sm btn-primary" [disabled]="eppFrissit"
+            type="button" (click)="onSubmit()">Ok</button>
+    <button class="btn btn-sm btn-default" [disabled]="eppFrissit"
+            style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+  </div>
+
+  <app-errormodal [cim]="bizonylatservice.bizonylatLeiro.BizonylatNev"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
