--- a/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
@@ -97,7 +97,7 @@
              [(ngModel)]="bizonylatservice.TetelDtoEdited.EGYSEGAR"
              (focusout)="tetelcalc($event)"
              required>
-      <button class="btn btn-sm btn-outline-primary" (click)="Br()"
+      <button class="btn btn-sm btn-outline-primary" (click)="bruttobol()"
               style="margin-left: 4px;margin-right: 4px" type="button"><- Br</button>
       <input type="number" class="form-control form-control-sm" id="bruttoosszeg" name="bruttoosszeg">
     </div>
