--- a/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
-  <h5 *ngIf="bizonylatservice.uj">Új {{bizonylatservice.bizonylatLeiro.BizonylatNev | lowercase}}tétel</h5>
-  <h5 *ngIf="!bizonylatservice.uj">{{bizonylatservice.bizonylatLeiro.BizonylatNev}}tétel módosítása</h5>
+  <h5 *ngIf="bizonylatservice.teteluj">Új {{bizonylatservice.bizonylatLeiro.BizonylatNev | lowercase}}tétel</h5>
+  <h5 *ngIf="!bizonylatservice.teteluj">{{bizonylatservice.bizonylatLeiro.BizonylatNev}}tétel módosítása</h5>
 
   <div class="row no-gutters editform-row">
     <div class="col-md-2">
