--- a/src/app/irat/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -51,6 +51,10 @@
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="UgyfelZoom()">...</button>
+        <button class="btn btn-sm btn-outline-primary" (click)="UgyfelTorles()"
+                style="margin-left: 4px" type="button">
+          <i class="fa fa-close" aria-hidden="true"></i>
+        </button>
       </div>
     </div>
     <div class="row no-gutters editform-row">
