--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujajanlat/projekt-bizonylatesirat-ujajanlat.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujajanlat/projekt-bizonylatesirat-ujajanlat.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-2">
         <input type="date" class="form-control form-control-sm" id="ervenyes"
-               [(ngModel)]="Ervenyes" name="ervenyes">
+               [(ngModel)]="projektkapcsolatservice.AjanlatErvenyes" name="ervenyes">
       </div>
     </div>
 
