--- a/src/app/particio/particio-nav/particio-nav.component.html
+++ b/src/app/particio/particio-nav/particio-nav.component.html
@@ -2,6 +2,56 @@
   <h5>NAV</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Url</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m1"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.NAV_URL" name="m1">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Azonosító</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m2"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.NAV_FELHASZNALOAZONOSITO" name="m2">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Jelszó</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m3"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.NAV_FELHASZNALOJELSZO" name="m3">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Aláírókulcs</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m4"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.NAV_ALAIROKULCS" name="m4">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Cserekulcs</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m5"
+               autocomplete="off"
+               [(ngModel)]="particioservice.Dto.NAV_CSEREKULCS" name="m5">
+      </div>
+    </div>
 
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
