--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -1,5 +1,8 @@
 <div class="alapkeret">
   <h5>{{particioservice.cim}}</h5>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{particioservice.Dto.MEGNEVEZES}}</div>
+  </div>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="szallito()" class="btn btn-sm btn-outline-primary navgomb">
