--- a/src/app/particio/particio-szallito/particio-szallito.component.html
+++ b/src/app/particio/particio-szallito/particio-szallito.component.html
@@ -3,6 +3,97 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Név</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m1"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="particioservice.Dto.SZALLITO_NEV" name="m1">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Irányítószám</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m2"
+               autocomplete="off" maxlength="10"
+               [(ngModel)]="particioservice.Dto.SZALLITO_IRANYITOSZAM" name="m2">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Helységnév</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m3"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="particioservice.Dto.SZALLITO_HELYSEGNEV" name="m3">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Utca, házszám</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m4"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="particioservice.Dto.SZALLITO_UTCAHAZSZAM" name="m4">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Bankszámla 1</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m5"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="particioservice.Dto.SZALLITO_BANKSZAMLA1" name="m5">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Bankszámla 2</div>
+      </div>
+      <div class="col-md-3">
+        <input type="text" class="form-control form-control-sm" id="m6"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="particioservice.Dto.SZALLITO_BANKSZAMLA2" name="m6">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Adó törzsszám</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m7"
+               autocomplete="off" maxlength="8"
+               [(ngModel)]="particioservice.Dto.SZALLITO_ADOTORZSSZAM" name="m7">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Adó áfakód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m8"
+               autocomplete="off" maxlength="1"
+               [(ngModel)]="particioservice.Dto.SZALLITO_ADOAFAKOD" name="m8">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Adó megyekód</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="m9"
+               autocomplete="off" maxlength="2"
+               [(ngModel)]="particioservice.Dto.SZALLITO_ADOMEGYEKOD" name="m9">
+      </div>
+    </div>
+
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
