--- a/src/app/particio/particio-smtp/particio-smtp.component.html
+++ b/src/app/particio/particio-smtp/particio-smtp.component.html
@@ -82,7 +82,7 @@
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="particioservice.Dto.SMTP_TLS" name="m8">
           <option value="false">Nem</option>
-          <option value="true">Igen</option>
+          <option value="trueng">Igen</option>
         </select>
       </div>
     </div>
