--- a/src/app/irat/irat/irat-list/irat-list.component.html
+++ b/src/app/irat/irat/irat-list/irat-list.component.html
@@ -43,3 +43,4 @@
   </app-toolbarfooter>
   <app-errormodal [cim]="iratservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
